--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
 }
 
 .logo {
@@ -104,7 +104,7 @@ nav ul li a:hover::after {
 
 .about-col-1 img {
     width: 100%;
-    border-radius: 15px;
+    border-radius: 50%;
 }
 
 .about-col-2 {
@@ -117,57 +117,6 @@ nav ul li a:hover::after {
     color: white;
 }
 
-.tab-titles {
-    display: flex;
-    margin: 20px 0 40px;
-}
-
-.tab-links {
-    margin-right: 50px;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-    position: relative;
-}
-
-.tab-links::after {
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #ff004f;
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    transition: 0.5s;
-}
-
-.tab-links.active-link {
-    width: 20px;
-    color: #ff004f;
-}
-
-.tab-titles p a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.tab-contents ul li {
-    list-style: none;
-    margin: 10px 0;
-}
-
-.tab-contents ul li span {
-    color: #ff004f;
-    font-size: 14px;
-}
-
-.tab-contents {
-    display: none;
-}
-
-.tab-contents.active-tab {
-    display: block;
-}
 
 /* services */
 
@@ -296,7 +245,7 @@ nav ul li a:hover::after {
     margin: 50px auto;
     width: fit-content;
     border: 1px solid #ff004f;
-    padding: 14px 50px;
+    padding: 14px 50px; 
     border-radius: 10px;
     text-decoration: none;
     color: #fff;
@@ -411,38 +360,3 @@ padding-top: 50px;
 }
 }
 
-@media only screen and (max-width: 932px) {
-
-    .row {
-        display: flex;
-        justify-content: center;
-        /* font-size: 20px; */
-    }
-
-    .oaa {
-        display: flex;
-        justify-content: center;
-        /* margin-left: center; */
-    }
-
-    .about-col-2 {
-        padding-left: 30px;
-        color: #ff004f;
-
-    }
-
-    .header-text {
-        margin-top: 50%;
-        font-size: 20px;
-        /* margin: 0; */
-    }
-
-    .header-text {
-        font-size: 15px;
-        padding-top: 50%;
-
-    }
-
-    /* .sub-title{ */
-    font-size: 35px;
-}
