--- a/style.css
+++ b/style.css
@@ -50,17 +50,23 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: #e4e8eb;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 20px;
     position: relative;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
+nav ul li a span{
+    color: black;
 }
 
 nav ul li a::after {
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #069b2e;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -68,12 +74,13 @@ nav ul li a::after {
 }
 
 nav ul li a:hover::after {
-    width: 100%;
+    width: 50%;
 }
 
 .header-text {
     margin-top: 20%;
     font-size: 30px;
+    font-style:oblique;
 }
 
 .header-text h1.header-text h1 {
@@ -89,7 +96,7 @@ nav ul li a:hover::after {
 
 #about {
     padding: 80px 0;
-    color: white;
+    color: rgb(238, 230, 230);
 }
 
 .row {
@@ -114,7 +121,8 @@ nav ul li a:hover::after {
 .sub-title {
     font-size: 60px;
     font-weight: 600;
-    color: white;
+    color: rgb(252, 246, 246);
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 
@@ -153,7 +161,7 @@ nav ul li a:hover::after {
 
 .services-list div a {
     text-decoration: none;
-    color: #fff;
+    color: #e8dede;
     font-size: 12px;
     margin-top: 20px;
     display: inline-block;
@@ -257,7 +265,9 @@ nav ul li a:hover::after {
 
 /*------------------------------------------------ contact-------------------------------------- */
 
-
+.container h1{
+    font-size: 40px;
+}
 
 .contact-left {
     flex-basis: 35%;
